--- a/style.css
+++ b/style.css
@@ -7,16 +7,40 @@ body {
 }
 
 main {
-    margin-top: 10rem;
+    margin-top: 8rem;
     display: flex;
     flex-flow: column nowrap;
     justify-items: center;
     align-items: center;
 }
 
+.list {
+    display: grid;
+    grid-template-columns: 75% 25%;
+    grid-template-rows: auto;
+    gap: 1rem;
+}
+
 h1 {
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
     text-transform: uppercase;
     color: rgb(42, 42, 42);
+}
+
+h2 {
+    margin: 7px 0;
+    font-size: 1.5rem;
+}
+
+.firstSubtitle {
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+}
+
+.secondSubtitle {
+    padding-top: 4rem;
+    grid-column: 1 / 3;
 }
 
 input[type="text"] {
@@ -35,21 +59,37 @@ button {
     background-color: rgba(0, 128, 0, 0.477);
     border-radius: 8px;
     border: none;
-    cursor: pointer;
+    justify-self: right;
 }
 
-button:hover {
+button:hover:enabled {
+    cursor: pointer;
     color: white;
     background-color: cadetblue;
 }
 
+#noTasks {
+    padding: 0.5rem 0;
+    grid-column: 1 / 3;
+    justify-self: center;
+    color: rgb(105, 105, 105);
+}
+
+#clearButton {
+    grid-column: 1 / 3;
+    justify-self: right;
+}
+
 ul {
+    grid-column: 1 / 3;
+    margin: 0;
     list-style: circle;
 }
 
 li {
     cursor: pointer;
 }
+
 
 .done {
     text-decoration: line-through;
